<b>Version 1.284</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Erstes Element einer Playliste löste Fehler beim erstellen des Vor- und Zurückbuttons aus.</li>
</ul>
<b>Version 1.283</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Letztes Element einer Playliste löste Fehler beim erstellen des Vor- und Zurückbuttons aus.</li>
</ul>
<b>Version 1.282</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Wenn Anzahl Autoplay grösser 0, wird Autoplay automatisch aktiviert und bei kleiner oder gleich 0 deaktiviert.</li>
</ul>
<b>Version 1.281</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Vor- und Zurückbutton bei Suchresultaten haben nicht funktioniert.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Gemischte Playlisten (Audio/Video/Bild) konnten nicht korrekt wiedergegeben werden</li>
</ul>
<b>Version 1.28</b>:<br>
<ul>
    <li>[<span style="color: #e21af3">BUG</span>] Erstes Element eines Ordners kann nicht mittels Autoplay gestartet werden.</li>
    <li>[<span style="color: #e21af3">BUG</span>] Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</li>
    <li>[<span style="color: red">FEATURE</span>] Einstellungsmenü hinzugefügt zum manipulieren der Autoplay-Werte und zur Fehlerbehebung.</li>
    <li>[<span style="color: red">FEATURE</span>] Autoplayfunktion eingefügt zum automatischen Abspielen von Medieninhalten (z.B. Diashow)</li>
    <li>[<span style="color: red">FEATURE</span>] Vor- und Zurück-Buttons benötigen kein neues Laden sofern die Medien im selben Ordner sind</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Kommas in Ordner oder Dateinamen konnten zu fehlerhaftem Laden führen.</li>
    <li>[OPTIMIERUNG] Einführen von Listenseperator-Stringketten</li>
    <li>[OPTIMIERUNG] Überarbeitung Ein- und Ausblenden von Containern</li>